# gssp_analysis

./: .gitignore  README.md  makefile  pyproject.toml
GSSP_utils/: conf.py  data_filtering.py  path_conf.py  processing.py  speech_analysis.py  visualizations.py
GSSP_utils/cgn/: ort_parser.py
loc_data/: GSSP_manual_analysis.tsv  df_session_tot_cleaned.parquet  df_session_tot_cleaned_VAD.parquet
notebooks/: 0.1_EDA.ipynb  0.2.1_Process_audio_Transform.ipynb  0.2.1_Transform_Audio.ipynb  0.2.2_Speechbrain_VAD.ipynb  0.2_Arousal_Valence_analysis.ipynb  0.2_Audio_Quality.ipynb  0.3_Audio_Quality.ipynb  0.3_Process_audio_Analyze_quality.ipynb  0.3_manual_audio_quality.ipynb  0.4.1_Parse_Audio_Extract_feats.ipynb  0.4.1_Process_audio_Parse_Extract_feats.ipynb  0.4_Parse_Audio_Data.ipynb  0.4_Parse_Audio_VAD_slice.ipynb  0.4_Process_audio_Parse_VAD_slice.ipynb  0.5.0_OpenSMILE_visualizations.ipynb  0.5.1_OpenSMILE_visualizations_full_dur.ipynb  0.5_OpenSMILE_visualizations.ipynb  1.1_CGN_EDA_parsing.ipynb  1.1_OpenSMILE_featureExtraction.ipynb  1.1_OpenSMILE_feature_extraction.ipynb  1.2_CGN_listen_extract_feats.ipynb  1.2_OpenSMILE_visualizations.ipynb  1.3_OpenSMILE_ML.ipynb  1.5.0_Pyannote_extract_VAD.ipynb  2.1_ECPA_TDNN.ipynb  README.md
scripts/: .Rhistory  1.0_FactorAnalysis.R  1.1_Stats.R  1.2_FactorAnalysis.Rmd  1.2_FactorAnalysis.html  CGN_speaker_homogenator.py  README.md  r_packages.txt  spr_io.py  spraak_core.py
sgs_utils/: data_filtering.py  dataframes.py  path_conf.py  processing.py  speech_analysis.py  speech_metrics.py  vad_opensource.conf
(+24 files in other folders)
